--- a/src/Raven.Studio/wwwroot/App/views/database/indexes/editIndex.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/indexes/editIndex.html
@@ -605,7 +605,7 @@
                             </a>
                         </span>
                         <div class="btn-group properties-value has-disable-reason"
-                             data-bind="validationElement: indexOrStore}">
+                             data-bind="validationElement: indexOrStore">
                             <button type="button" class="btn set-size dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
                                     data-bind="css: { 'border-warning': isStoreField() && isLucene() }">
                                 <span data-bind="text: effectiveStorage"></span> <span class="caret"></span>
